[package]
name = "evtc"
version = "0.1.0"
authors = ["Martin Wernstål <m4rw3r@gmail.com>"]

[lib]
name = "evtc"
path = "src/lib.rs"

[profile.release]
overflow-checks = true

[dependencies]
fnv = "1.0.3"
clap = "2.32"
memmap = "0.6.2"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
zip = "0.4"